--- a/XO/Main/Main/My Project/Resources.resx
+++ b/XO/Main/Main/My Project/Resources.resx
@@ -118,11 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="blue_die" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\flash\blue_die.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="blue_f" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\flash\blue_f.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="red_f" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\flash\red_f.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="intro_d" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\flash\intro_d.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -130,8 +130,13 @@
   <data name="red_die" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\flash\red_die.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="red_f" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\flash\red_f.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="blue_die" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\flash\blue_die.swf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
- 
+  <data name="o" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\flash\o.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\flash\x.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
